--- a/css/style.css
+++ b/css/style.css
@@ -421,7 +421,7 @@ img {
 	line-height: 24px;
 	margin: 0;
 	padding: 0 0 27px;
-	text-align: left;
+	text-align: center;
 	text-transform: uppercase;
 }
 #body div.footer div p, #body div.footer div span {
@@ -432,7 +432,7 @@ img {
 	line-height: 24px;
 	margin: 0;
 	padding: 0 0 24px;
-	text-align: left;
+	text-align: center;
 }
 #body div.footer div span {
 	display: block;
@@ -669,7 +669,7 @@ img {
 	background-color: #EFEDEE;
 	float: left;
 	margin: 0;
-	padding: 0 0 71px;
+	padding: 0 0 29px;
 	width: 280px;
 }
 #body div.singlepost .sidebar {
